# STAIRS

./: .env.example  .gitattributes  .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.observability.yaml  docker-compose.test.yaml  docker-compose.yaml
.devcontainer/: .devcontainer.json  Dockerfile
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yaml  feature_request.md
.github/workflows/: build-validation.yml  code-quality.yml  testing-suite.yml
api/vehicle-cloud-api/: README.md
api/vehicle-cloud-api/proto/: robot_soccer.proto  vehicle_cloud_events.proto  vehicle_commands.proto  vehicle_msgs.proto
api/vehicle-cloud-api/vss/: quantities.yaml  units.yaml  vss_scooter_signals.yaml
cloud/backend/delivery_backend/: .env.demo  .env.development  .env.emad  package-lock.json  package.json  zenoh_config_dev.json5
cloud/backend/delivery_backend/src/: app.module.ts
cloud/backend/delivery_backend/src/commands/: command.entity.ts  commands.controller.ts  commands.service.ts
cloud/backend/delivery_backend/src/influxdb/: influxdb.service.ts
cloud/backend/delivery_backend/src/monitoring/: otel-logging.ts  otel-tracing.ts
cloud/backend/delivery_backend/src/telemetry/: telemetry.controller.ts
cloud/backend/delivery_backend/src/users/: user.entity.ts  users.service.ts
cloud/backend/delivery_backend/src/vehicles/: vehicle.entity.ts  vehicles.contoller.ts  vehicles.module.ts  vehicles.service.ts
cloud/backend/delivery_backend/test/: app.e2e-spec.ts
cloud/backend/device_gateway/: .flake8  README.md  pyproject.toml  scripts.py
cloud/backend/device_gateway/device_gateway/: configuration.py  main.py
cloud/backend/device_gateway/device_gateway/api/: devices.py  health.py  robots.py  vehicles.py
cloud/backend/device_gateway/device_gateway/db/: __init__.py  influx_writer.py  vehicle_repository.py
cloud/backend/device_gateway/device_gateway/twin/: __init__.py  create_vehicle_data.py  robot_command_publisher.py  robot_state.py  robot_state_subscriber.py  twin_service.py  vehicle_command_publisher.py  vehicle_state.py  vehicle_state_subscriber.py
cloud/backend/stairs_api/: .env.demo  .env.development  .env.emad  .eslintrc.js  README.md  nest-cli.json  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
cloud/backend/stairs_api/src/: app.module.ts  main.ts
cloud/backend/stairs_api/src/auth/: auth.controller.ts  auth.guard.ts  auth.module.ts  auth.service.ts  constants.ts
cloud/backend/stairs_api/src/commands/: command.entity.ts  commands.controller.spec.ts  commands.controller.ts  commands.module.ts  (+2 more)
cloud/backend/stairs_api/test/: app.e2e-spec.ts  jest-e2e.json
cloud/backend/vehicle_gateway/: .flake8  pyproject.toml  scripts.py  write-dummy-data.py  write-history-data.py
cloud/backend/vehicle_gateway/vehicle_gateway/: configuration.py  main.py
cloud/backend/vehicle_gateway/vehicle_gateway/api/: health.py  robots.py  vehicles.py
cloud/backend/vehicle_gateway/vehicle_gateway/db/: influx_writer.py  vehicle_repository.py
cloud/backend/vehicle_gateway/vehicle_gateway/twin/: create_vehicle_data.py  robot_command_publisher.py  robot_state.py  robot_state_subscriber.py  twin_service.py  vehicle_command_publisher.py  vehicle_state.py  vehicle_state_subscriber.py
doc/: architecture.md  build_tools.md  changelog.md  how-to.md  roadmap.md
docker/backend/cloud_router/: Dockerfile  zenoh_config.json5
docker/backend/delivery_backend/: Dockerfile
docker/backend/device_gateway/: Dockerfile
docker/backend/stairs_api/: Dockerfile
docker/backend/vehicle_gateway/: Dockerfile
docker/unified_tests/: Dockerfile  wait-for-services.sh
monitoring/: README.md
monitoring/grafana/: README.md  grafana.ini
monitoring/grafana/provisioning/alerting/: alert.json
monitoring/grafana/provisioning/dashboards/: all.yml  device-location-map-dashboard.json  infrastructure-data-dashboard.json  logs-dashboard.json  telemetry-data-dashboard.json  vehicle-location-map-dashboard.json
monitoring/grafana/provisioning/datasources/: all.yml
monitoring/loki/: config.yaml
monitoring/otel-collector/: config.yaml
monitoring/prometheus/: prometheus.yml
monitoring/tempo/: config.yaml
scripts/: generate_api.sh  generate_async_api.sh  generate_protobuf_from_vss.sh  initialize_influxdb.sh  lat_lon_to_prerender_cmd.py  setup_postgres_dev.sh
scripts/cross_compile/: rpi.sh
scripts/demo/: clean_vehicles_data.sh  load_bonn_map.sh  rebuild_and_restart.sh
scripts/deploy/: deploy_pi.sh  zenoh_config.json5
tests/: .gitignore  README.md  package-lock.json  package.json  playwright.config.js
tests/api/: basic.test.js
tests/api/stairs_api/: stairs-api.spec.ts
tests/config/: test-config.ts
vehicles/scooter-demo/docker/vehicle/: Dockerfile
(+34 files in other folders)
