# Copyright (c) 2025 by OpenTier GmbH
# SPDX-FileCopyrightText: 2025 OpenTier GmbH
# SPDX-License-Identifier: LGPL-3.0-or-later

# This file is part of OpenTier.

# This is free software: you can redistribute it and/or modify
# it under the terms of the GNU Lesser General Public License as
# published by the Free Software Foundation; either version 3 of the
# License, or (at your option) any later version.

# This is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Lesser General Public License for more details.

# You should have received a copy of the GNU Lesser General Public
# License along with this file.  If not, see <https://www.gnu.org/licenses/>.

[tool.poetry]
name = "device-gateway"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
eclipse-zenoh = "1.0.0"
protobuf = "==3.20.*"
influxdb-client = "1.45.0"
fastapi = { extras = ["standard"], version = "^0.115.0" }
json5 = "0.9.25"
pymongo = "<4.10"
motor = "^3.6.0"
httpx = "^0.27.2"
google-api-python-client = "^2.161.0"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
flake8 = "^7.1.1"

[tool.poetry.scripts]
format = "scripts:format_code"
lint = "scripts:lint_code"
proto = "scripts:generate_proto"
dev = "scripts:run_dev"
prod = "scripts:run_prod"

[tool.black]
line-length = 88
target-version = ['py310']
exclude = '''
/(
    venv
    | __pycache__
    | device_gateway/generated
)/
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
